gtk+4.0 (3.91.2-1) UNRELEASED; urgency=medium

  * New major release, GTK+ 4 (beta version).
    Rename everything as appropriate for GTK+ 4.
  * Don't abort on test suite failures.
  * Update symbols. Set all symbols' minimum version to 3.91.2.
  * Update build-dependencies: bump gtk-doc-tools and libglib2.0-dev
    minimum requirement, add libgraphene-1.0-dev and autoreconf-archive.
  * Drop libgail packages, they are no longer built from GTK+ 4.
  * Don't install libgdk-4.so, it has been merged into libgtk-4.so.
  * debian/patches/016_no_offscreen_widgets_grabbing.patch,
    debian/patches/017_no_offscreen_device_grabbing.patch:
    + Removed, obsolete as offscreen widgets are gone in GTK+ 4.
  * debian/patches/022_disable-viqr-im-for-vi-locale.patch:
    + Removed, imported in 2009 with no explanation whatsoever.
  * debian/patches/060_ignore-random-icons.patch:
    + Removed, upstream fixed this differently eons ago (see bgo#451634).
  * debian/patches/018_gdkenumtypes.c_location.patch:
    + Refreshed.
  * debian/libgtk-4-dev.install: don't install aclocal files.
  * debian/libgtk-4-common.install.in: comment out EmojiChooser schema, it's
    not present in 3.91.2 but will be in the next release.
  * Update watch file.
  * Point Vcs-* to experimental.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 11 Sep 2017 23:33:08 +0200

gtk+3.0 (3.22.21-1) unstable; urgency=medium

  * New upstream release.
  * Bump to debhelper compat 10.
    + Drop dh-autoreconf and autotools-dev build-deps, no longer needed as
      debhelper guarantees them now.
  * Switch from CDBS to dh.
    Only regression is that we don't run --fail-missing on arch:all builds.
  * Don't build the docs when not building the -doc packages. Saves some
    time on arch-only builds.
  * Skip the udeb build when not building the -udeb package. Saves a lot
    of time on the arch:all builds.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 12 Sep 2017 00:38:15 +0200
