@@ -2,7 +2,7 @@ Source: gtk+4.0
 Section: libs
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Iain Lane <laney@debian.org>, Michael Biebl <biebl@debian.org>
+Uploaders: Emilio Pozuelo Monfort <pochu@debian.org>, Iain Lane <laney@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: debhelper (>= 10.3~),
                gnome-pkg-tools (>= 0.11),
                dpkg-dev (>= 1.17.14),
@@ -105,7 +105,8 @@ Package: libgtk-4-common
 Section: misc
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
+         libgtk-3-common
 Recommends: libgtk-4-0
 Breaks: libgtk-4-0 (<< 3.5.4)
 Replaces: libgtk-4-0 (<< 3.5.4)
@@ -124,7 +125,8 @@ Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends},
          libgtk-4-0 (>= ${source:Version}),
          libgtk-4-common (>= ${source:Version}),
-         gtk-update-icon-cache
+         gtk-update-icon-cache,
+         libgtk-3-bin
 Description: programs for the GTK+ graphical user interface library
  GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, GTK+ is suitable
@@ -199,7 +201,8 @@ Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         libgtk-4-0 (= ${binary:Version})
+         libgtk-4-0 (= ${binary:Version}),
+         gtk-3-examples
 Breaks: libgtk-4-common (<< 3.5.4)
 Replaces: libgtk-4-common (<< 3.5.4)
 Description: example files for GTK+ 4
